src/scss/parts/acf/_filtered-loop.scss
%dropdown_text {
  font-size: 14px;
  font-weight: 400 !important;
  letter-spacing: -0.4px;
  color: $medium-green;
  text-transform: uppercase;
  line-height: 1.1;
  
  user-select: none;
}

%listings_loop {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  padding: 35px $bodyPadding2;
  width: 100%;

  @include respond-to(tablet) {
    padding: 75px $bodyPadding1;
  }

  @include respond-to(desktop) {
    /* justify-content: flex-start; */
  }

  .loop-post {
    margin-bottom: 35px;
    width: 100%;

    @include respond-to(tablet) {
      margin-left: 2%;
      margin-right: 2%;
      width: 46%;
    }

    @include respond-to(desktop) {
      margin-left: 2%;
      margin-right: 2%;
      width: 28%;
    }

    .featured-image-wrapper {
      width: 100%;
      height: 56vw;
      padding-bottom: 0;

      @include respond-to(tablet) {
        /* width: 250px;
        height: 190px; */
        max-width: 100%;

        width: 100%;
        height: auto;
        min-height: 220px;
      }

      .featured-image {
        width: 100%;
        height: 100%;

        background-color: $light-grey;
        background-size: cover;
        background-position: center;
      }
    }

    .content-wrapper {
      h4 {
        margin: 10px 0;
        font-size: 19px;
        font-weight: 500;
        letter-spacing: normal;
        color: $medium-green;
        text-transform: uppercase;
      }

      .excerpt {
        margin-bottom: 10px;
      }

      button {
        margin-bottom: 10px;
      }

      .post-terms-wrapper {
        display: flex;
        flex-wrap: wrap;

        .term {
          @extend %useTermStyle;

          margin-right: 20px;
        }
      }
    }
  }

  &:not(:last-child) {
    padding-bottom: 0;
  }
}

.torque-filtered-loop-react-entry {
  .custom-filters {
    display: flex;
    flex-wrap: wrap;

    .torque-acf-tabs-filters {
      display: flex;
      justify-content: center;
      width: 100%;

      background-color: $light-green;

      button.torque-filtered-loop-filter-button {
        flex-grow: 1;

        font-size: 13px;
        text-transform: uppercase;
        background-color: $light-green;
        border-color: $light-green;

        @include respond-to(tablet) {
          flex-grow: 0;
          padding: 10px 40px;

          font-size: 16px;
        }

        @include respond-to-max(tablet) {
          padding: 0.5rem 1rem;
          line-height: 1.1;
        }

        @include respond-to-max-custom(425px) {
          font-size: 14px;
          width: 50%;
        }

        &:hover,
        &.active {
          font-weight: 500;
          background-color: $medium-green;
          border-color: $medium-green;
          color: $white;
        }

        &.active {
          position: relative;

          &::after {
            content: "";

            position: absolute;
            top: 100%;
            left: 50%;
            z-index: 2;
            transform: translateX(-50%);

            width: 0;
            height: 0;
            border-left: 7px solid transparent;
            border-right: 7px solid transparent;
            border-top: 7px solid $medium-green;
          }
        }
      }

      @include respond-to-max(tablet) {
        flex-wrap: wrap;
      }
    }

    .torque-custom-filter-dropdown {
      position: relative;
      width: 50%;

      background-color: $very-light-gray;
      cursor: pointer;

      @include respond-to-max-custom(425px){
        display: flex;
        justify-content: center;
        align-items: center;
      }

      .dropdown-title-wrapper {
        @extend %dropdown_text;

        display: flex;
        justify-content: center;
        align-items: center;
        padding: 15px 10px;

        background-color: $very-light-gray;

        &::before {
          content: "";

          padding-right: 5px;
          width: 15px;
          height: 15px;

          background-image: url("../statics/images/filter-icon.svg");
          background-size: contain;
          background-repeat: no-repeat;

          @include respond-to-max(tablet) {
            margin-right: 5px;
          }
        }

        &::after {
          content: "";

          margin-left: 5px;
          width: 0;
          height: 0;
          border-left: 7px solid transparent;
          border-right: 7px solid transparent;
          border-top: 7px solid $medium-green;
        }

        @include respond-to-max-custom(425px) {
          font-size: 14px !important;
          line-height: 1.4 !important;
          padding: 10px;
        }

        .dropdown-title {
          &:not(:only-child) {
            padding-right: 5px;

            @include respond-to-max(tablet) {
              display: none;
            }
          }
        }
      }

      .dropdown-wrapper {
        position: absolute;
        top: 105%;
        right: 0;
        z-index: 2;

        padding: 10px 20px;
        max-width: 150px;
        max-height: 500px;
        overflow-y: auto;

        background-color: $very-light-gray;

        // Modified scrollbar for these filter dropdowns
        &::-webkit-scrollbar {
          -webkit-appearance: none;
        }
        
        &::-webkit-scrollbar:vertical {
          width: 8px;
        }
        
        &::-webkit-scrollbar:horizontal {
          height: 8px;
        }
        
        &::-webkit-scrollbar-thumb {
          background-color: rgba(0,0,0,0.2);
          border-radius: 0;
        }
        
        &::-webkit-scrollbar-track {
          border-radius: 0; 
          background-color: #ffffff59; 
        }

        @include respond-to(tablet) {
          right: 10%;
        }

        @include respond-to-max-custom(425px){
          border-top: 1px solid $light-grey;
          box-shadow: inset 0 -10px 23px -20px #000;
          left: 0;
          right: 0;
          top: 100%;
          max-width: 100%;
          max-height: 300px;
          overflow-y: scroll;

        }

        .dropdown-item {
          @extend %dropdown_text;

          padding: 5px 0;

          @include respond-to-max-custom(425px){
            font-size: 14px !important;
            line-height: 1.2;
          }
        }
      }
    }
  }

  .posts-wrapper {
    @extend %listings_loop;
  }

  button.torque-filtered-loop-load-more {
    @extend %useLoadMoreButtonStyle;
  }

  &[data-post_type^="post"] {
    .post-terms-wrapper {
      display: none !important;
    }
  }
}

